crates/rargs/tests/snapshots/test_scripts__impl-19.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stderr] commands.sh "
expression: "String::from_utf8(match \"stderr\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
[31mMissing command. Select one of [33mdownload, upload[31m[0m

Sample application

[4mUsage:[0m
  commands [OPTIONS] [COMMAND] [COMMAND_OPTIONS]
  commands -h|--help
  commands -v|--version

[4mExamples:[0m
  commands download -h
    Download command help
  commands download [OPTIONS] SOURCE [TARGET]
    Download command example
  commands upload -h
    Upload command help
  commands upload [OPTIONS] SOURCE
    Upload command example

[4mCommands:[0m
  download .... Download a file
  upload ...... Upload a file

[4mOptions:[0m
  -h --help
    Print help
  -v --version
    Print version

