crates/rargs/tests/snapshots/test_scripts__impl-196.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] json.sh --help"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Script that tests if rargs can handle JSON serialized strings in multi-line mode.

[4mUsage:[0m
  json [OPTIONS]
  json -h|--help
  json -v|--version

[4mOptions:[0m
  -h --help
    Print help
  -v --version
    Print version

