crates/rargs/tests/snapshots/test_scripts__impl-243.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stderr] private.sh "
expression: "String::from_utf8(match \"stderr\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
[31mMissing command. Select one of [33mconnect[31m[0m

Sample application with private commands

[4mUsage:[0m
  private [OPTIONS] [COMMAND] [COMMAND_OPTIONS]
  private -h|--help
  private -v|--version

[4mCommands:[0m
  connect .... Connect to the metaverse

[4mOptions:[0m
  -h --help
    Print help
  -v --version
    Print version

