crates/rargs/tests/snapshots/test_scripts__impl-244.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] stdin.sh option --help"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Read from stdin or from a file using an option

[4mUsage:[0m
  option [OPTIONS]
  option -h|--help

[4mOptions:[0m
  -p --path [<PATH>]
    Path to file (reads from stdin if empty)
    [@default -]
  -h --help
    Print help

